Authentication UI design

--- a/ELearning/ELearning/Localizable.strings
+++ b/ELearning/ELearning/Localizable.strings
@@ -6,3 +6,5 @@
   
 */
 "forgotPassword" = "Forgot password";
+"userRegisterd" = "User Registered";
+"userLoginSucessful" = "User Login Successful";
